--- a/index.html
+++ b/index.html
@@ -4,7 +4,140 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./fonts/fonts.css">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+   <!--Emmet Abbreviations
+        Памятка для себя:
+        header.header(это класс) - создат структуру автоматом.
+        header.header+main.main>section*3 - создаст еще 3 секции
+        > - вложенность, то есть дети(потомки)
+      -->
+  <body>
+    <header class="header">
+      <ul class="header__menu">
+        <li class="header__links-list-item header__links-list-item_no-bullit">
+          <p class="header__link " href="#">главная</p>
+        </li>
+        <li class="header__links-list-item">
+          <a class="header__link_active" href="#">посмотреть лоты</a>
+        </li>
+        <li class="header__links-list-item">
+          <a class="header__link_active" href="#">об аукционе</a>
+        </li>
+      </ul>
+      <section class="header__logo">
+          <div class="header__logo-image">
+            <img src="./images/logo-black.svg" alt="логотип">
+          </div>
+      </section>
+      <section class="address">
+        <address class="header__address">
+          <a href="tel:+70000000">+9 999 555 5555</a>
+          <a href="mailto:mail@example.com">info@sobaka.ge</a>
+          <a>наб.Принсенграхт 263-<br> 265, Амстердам</a>
+        </address>
+      </section>
+    </header>
+    <main class="main">
+      <section class="cover">
+        <h1 class="cover__title">
+           <span class="aligned-text">О<span class="letter-spacing-extended">н</span><span class="no-letter-spacing">о</span></span>
+           <span class="aligned-text_center">те<span class="letter-spacing-extended">бe</span><span class="no-letter-spacing"></span></span>
+           <span class="aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text">Аукцион<span class="whitespace"> </span>вещей,<span class="whitespace"> </span><span class="b-span">в</span><span class="whitespace"> </span>которые<span class="whitespace"> </span>никто<span class="whitespace"> </span>не<span class="whitespace"> </span>верил</p>
+          <button class="bet-button" type="button">Сделать ставку</button>
+        </div>
+        <div class="overlay"> </div>
+      </section>
+      <section class="lots">
+        <h2 class="lots__heading">Лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item ">
+            <a href="#" class="card-link">
+              <div class="overlay"></div>
+              <article class="card card_type_film">
+                <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+                <p class="card__text">Не просто бросил, а ушёл<br> с первой лекции. Какой<br> была бы ваша ставка,<br> если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item ">
+            <a href="#" class="card-link">
+              <div class="overlay"></div>
+              <article class="card card_type_book">
+                <h3 class="card__title">Книга, где описан<br> один скучный день<br> из жизни<br> рекламного агента</h3>
+                <p class="card__text">Объёмом почти в тысячу страниц. Иногда без<br> знаков препинания и с переходами на древнеанглийский. В ней одновременно<br> рассказывается о 16 июня<br> 1904 года и об истории литературы, начиная с<br> античных времён. И это<br> всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили<br> на «Улисса» Джеймса<br> Джойса?</p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item ">
+            <a href="#" class="card-link">
+              <div class="overlay"></div>
+              <article class="card card_type_picture">
+                <h3 class="card__title">Картина, которую повторит даже 5-<br>летний сын<br> маминой подруги</h3>
+                <p class="card__text">Ну действительно, там<br> линия, тут кружочек, а<br> здесь и вовсе что-то<br> похожее на инфузорию-<br>туфельку. Никаких полей,<br> лесов, котиков... Сколько<br> бы вы на такое поставили,<br> если бы не знали, что это<br> — одна из<br> революционных работ<br> Кандинского?  </p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a href="#" class="lots__look-more-link">посмотреть больше</a>
+      </section>
+
+
+      <section class="about">
+        <div class="about__column">
+          <div class="about__logo ">
+            <div class="about__logo-image">
+              <img src="./images/logo-white.svg" alt="image">
+            </div>
+          </div>
+          
+          <div class="about__title">
+            <p class="first__title">Об аукционе</p>
+          </div>
+          <div class="about__text">
+            <h4 class="text1">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями? </h4>
+            <h5 class="text2">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</h5>
+          </div>
+        </div>
+      </section>
+    </main>
+
+
+    <footer class="footer">
+      <section class="footer__address">
+        <address class="footer__address">
+          <a href="tel:+70000000">+9 999 555 5555</a>
+          <a href="mailto:mail@example.com">info@sobaka.ge</a>
+          <a>наб.Принсенграхт 263-<br> 265, Амстердам</a>
+        </address>
+      </section>
+        <nav class="footer__menu">
+          <ul class="footer__menu-list">
+            <li class="footer__menu-link_active"><a href="#" class="footer__menu-link_active none-dicor">главная</a></li>
+            <li class="footer__menu-list-item"><a href="#">посмотреть лоты</a></li>
+            <li class="footer__menu-link"><a href="#">об аукционе</a></li>
+          </ul>
+        </nav>
+        <div class="footer__social-list">
+            <ul class="footer__social-list-item">
+              <li class="footer__social-link"><a href="#" class="footer__social-icon">
+                <img src="./images/yt.svg" alt="youtube">
+              </a></li>
+              <li class="footer__social-link"><a href="#" class="footer__social-icon">
+                <img src="./images/vk.svg" alt="vk">
+              </a></li>
+              <li class="footer__social-link"><a href="#" class="footer__social-icon">
+                <img src="./images/pinterest.svg" alt="pinterest">
+              </a></li>
+            </ul>
+        </div>
+    </footer>
+  </body>
+  
 </html>
