--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
               <div class="overlay"></div>
               <article class="card card_type_film">
                 <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
-                
-                <span class="card__text">Не просто бросил, а ушёл<span class="card__text"> с первой лекции. Какой</span><span class="card__text"> была бы ваша ставка,</span><span class="card__text"> если бы вы не знали, что режиссёр — Пол Томас Андерсон?</span></span>
+
+                <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
               </article>
             </a>
           </li>
@@ -72,20 +72,20 @@
             <a href="#" class="card-link">
               <div class="overlay"></div>
               <article class="card card_type_book">
-                <h3 class="card__title"><span class="card__title">Книга, где описан</span>
-                  <span class="card__title"> один скучный день</span>
-                  <span class="card__title"> из жизни</span>
-                  <span class="card__title"> рекламного агента</span></h3>
-                <span class="card__text">
-                  <span class="card__text">Объёмом почти в тысячу страниц. Иногда без</span>
-                  <span class="card__text"> знаков препинания и с переходами на древнеанглийский. В ней одновременно</span>
-                  <span class="card__text"> рассказывается о 16 июня</span>
-                  <span class="card__text"> 1904 года и об истории литературы, начиная с</span>
-                  <span class="card__text"> античных времён. И это</span>
-                  <span class="card__text"> всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили</span>
-                  <span class="card__text"> на «Улисса» Джеймса</span>
-                  <span class="card__text"> Джойса?</span>
-                </span>
+                <h3 class="card__title">Книга, где описан
+                   один скучный день
+                   из жизни
+                   рекламного агента</h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без
+                   знаков препинания и с переходами на древнеанглийский. В ней одновременно
+                   рассказывается о 16 июня
+                   1904 года и об истории литературы, начиная с
+                   античных времён. И это
+                   всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили
+                   на «Улисса» Джеймса
+                   Джойса?
+                </p>
               </article>
             </a>
           </li>
@@ -94,23 +94,23 @@
               <div class="overlay"></div>
               <article class="card card_type_picture">
                 <h3 class="card__title">
-                  <span class="card__title">Картина, которую повторит даже 5-</span>
-                  <span class="card__title">летний сын</span>
-                  <span class="card__title"> маминой подруги</span>
+                  Картина, которую повторит даже 5-
+                  летний сын
+                   маминой подруги
                 </h3>
-                <span class="card__text">
-                  <span class="card__text">Ну действительно, там</span>
-                  <span class="card__text"> линия, тут кружочек, а</span>
-                  <span class="card__text"> здесь и вовсе что-то</span>
-                  <span class="card__text"> похожее на инфузорию-</span>
-                  <span class="card__text">туфельку. Никаких полей,</span>
-                  <span class="card__text"> лесов, котиков... Сколько</span>
-                  <span class="card__text"> бы вы на такое поставили,</span>
-                  <span class="card__text"> если бы не знали, что это</span>
-                  <span class="card__text"> — одна из</span>
-                  <span class="card__text"> революционных работ</span>
-                  <span class="card__text"> Кандинского?  </span>
-                </span>
+                <p class="card__text">
+                  Ну действительно, там
+                   линия, тут кружочек, а
+                   здесь и вовсе что-то
+                   похожее на инфузорию-
+                   туфельку. Никаких полей,
+                   лесов, котиков... Сколько
+                   бы вы на такое поставили,
+                   если бы не знали, что это
+                   — одна из
+                   революционных работ
+                   Кандинского?
+                </p>
               </article>
             </a>
           </li>
@@ -130,12 +130,12 @@
           <div class="about__title">
             <h2 class="table__of__contents">Об аукционе</h2>
           </div>
-          <div class="about__text">
-            <p class="Glavtext">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями? </p>
-            <div class="DopText">
-              <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря </p>
-              <p>на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты </p>
-              <p>стали культовыми.</p>
+          <div class="about__text" >
+            <div class="glav__text">
+            <p >Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+              <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты
+              стали культовыми.
+              </p>
             </div>
           </div>
         </div>
@@ -145,7 +145,7 @@
 
     <footer class="footer">
       
-        <address class="Contact__information">
+        <address class="contact__information">
           <a href="tel:+70000000">+9 999 555 5555</a>
           <a href="mailto:mail@example.com">info@sobaka.ge</a>
           <p>наб.Принсенграхт 263-<br> 265, Амстердам</p>
